@startuml
'https://plantuml.com/class-diagram

'停用成员可见性彩色图标,使用标准uml可见性标识
'skinparam classAttributeIconSize 0

'使用主题

''深蓝色(推荐)
'!theme blueprint

'平面的样式(推荐)
!theme plain

''在缺省样式上,变成圆角(推荐)
'!theme resume-light

'!theme spacelab
'!theme black-knight

''浅蓝色
'!theme amiga

''浅蓝色前景,黑色背景
'!theme bluegray

''蓝色前景,黑色背景,彩色图标
'!theme minty

''橄榄绿前景,黑色背景,彩色图标
'!theme hacker

''浅灰背景,紫色文字(推荐)
'!theme mimeograph

'!theme sandstone
'!theme cyborg
'!theme materia
'!theme materia-outline

''以下两种类似于漫画体
'!theme sketchy
'!theme sketchy-outline


abstract class Subject
interface Observer{
    + response(BellSubject)
}

class TeacherObserver {

}

class StudentObserver {

}

class BellSubject {
+ bellName
}


Subject <|-- BellSubject
Observer <|.. TeacherObserver
Observer <|.. StudentObserver

Subject "1" o-- "many" Observer
'TeacherObserver ..> BellSubject
'StudentObserver ..> BellSubject
Observer ..> BellSubject

@enduml